Fix footer.
It had been messed up in 59db52f65b7e9e47ffb98bce682c4fb918f20115 because the
header was pushing the footer down 144px. So add a new div that's around both
the header and the content and make *that* be 100% instead of making the
content 100%.

--- a/ui/css/layout.css
+++ b/ui/css/layout.css
@@ -12,7 +12,7 @@
              to convert to a fixed width site.
  **************************************************************/
 
-#content {
+#all {
   height: 100%;
   min-height: 100%;
   text-align: left;
@@ -348,7 +348,7 @@ ul.sideMenu {
   width: 100%;
   clear: both;
   
-  margin-top: -3.8em;
+  margin-top: -3.5em;
   background: #000 url(../img/footer.jpg) repeat-x top left;
 }
 
